# cloudtts

./: README.md  pyproject.toml
src/cloud_tts/: aws_cloud.py  azure_cloud.py  main.py  text_blocks.py
src/cloud_tts_tool/: text_blocks.py
